FEAT - Coding the graph basics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,13 @@
         "string": "c",
         "string_view": "c",
         "items.h": "c",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "hash_map": "c",
+        "bitset": "c",
+        "hash_set": "c",
+        "format": "c",
+        "initializer_list": "c",
+        "span": "c",
+        "valarray": "c"
     }
 }
